kubernetes/media/immich/server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: immich-server
  name: immich-server
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      automountServiceAccountToken: false
      containers:
        - name: immich-server
          image: ghcr.io/immich-app/immich-server:v2.7.4
          securityContext:
            allowPrivilegeEscalation: false
          resources:
            limits:
              cpu: 1000m
              ephemeral-storage: "8Gi"
              memory: "4Gi"
            requests:
              cpu: 500m
              ephemeral-storage: "4Gi"
              memory: "2Gi"
          ports:
            - name: http
              containerPort: 2283
              protocol: TCP
          volumeMounts:
            - name: nfs-volume
              mountPath: /usr/src/app/upload
      volumes:
        - name: immich-server-configmap
          configMap:
            name: immich-server-configmap
        - name: nfs-volume
          nfs:
            server: nas.mcmumf.dev
            path: /volume1/photos
