kubernetes/media/immich/server/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-http-route
  namespace: media
  annotations:
    gethomepage.dev/description: Our photo and video library
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/icon: https://raw.githubusercontent.com/immich-app/immich/refs/heads/main/design/immich-logo.svg
    gethomepage.dev/name: Immich
    gethomepage.dev/pod-selector: "app=immich-server"
    gethomepage.dev/href: "https://photos.mcmumf.dev"
  labels:
    app: immich-server
spec:
  parentRefs:
    - name: external-gateway
      namespace: kube-system
  hostnames:
    - "photos.mcmumf.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: immich-server
          port: 2283
